# shotcut

./: .gitignore  LICENSE  README.md  main.py  models.py  pyproject.toml  tortoise_config.py
